--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
 </head>
 
 <body>
-  <main>
-    <div class="card">
-      <img src="./images/image-qr-code.png" alt="qr code" width="225" height="225">
-      <h1>Improve your front-end skills by building projects</h1>
-      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+  <main class="card">
+    <img src="./images/image-qr-code.png" alt="qr code" width="225" height="225">
+    <h1>Improve your front-end skills by building projects</h1>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </main>
-  <footer>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/Micha087">Micha087</a>.
-    </div>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/Micha087">Micha087</a>.
   </footer>
 </body>
 
